# hs-raft

./: Main.hs  cabal.project  raft.cabal
cbits/: helpers.c  helpers.h
src/Raft/: C.chs  Core.hs  Types.hs
