cabal-version:       3.4

name:                raft
version:             0.1.0.0
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
build-type:          Simple

library
  default-language:    Haskell2010
  ghc-options:         -Wall -g

  build-tool-depends:  c2hs:c2hs
  cc-options:          -Wall -g
  include-dirs:        cbits
  c-sources:           cbits/helpers.c
  includes:            raft.h helpers.h
  extra-libraries:     raft uv
  -- XXX: export LD_LIBRARY_PATH=~/raft/BUILD/usr/local/lib
  extra-lib-dirs:      /home/ricardo/KATAS/raft/BUILD/usr/local/lib
  include-dirs:        /home/ricardo/KATAS/raft/BUILD/usr/local/include

  hs-source-dirs:      src
  exposed-modules:     Raft.C
                     , Raft.Core
                     , Raft.Types
  build-depends:       base ==4.*
                     , bytestring

executable raft
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -g

  main-is:             Main.hs
  build-depends:       base
                     , raft
