cabal-version:       3.0

name:                raft
version:             0.1.0.0
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
build-type:          Simple

common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall -g
  build-depends:       base >=4.14

library
  import:              common-options

  build-tool-depends:  c2hs:c2hs
  cc-options:          -Wall -g
  include-dirs:        cbits
  c-sources:           cbits/helpers.c
  includes:            raft.h helpers.h
  extra-libraries:     raft uv
  -- XXX: export LD_LIBRARY_PATH=~/raft/BUILD/usr/local/lib
  extra-lib-dirs:      /home/ricardo/KATAS/raft/BUILD/usr/local/lib
  include-dirs:        /home/ricardo/KATAS/raft/BUILD/usr/local/include

  hs-source-dirs:      src
  exposed-modules:     Raft.C
                     , Raft.Core
                     , Raft.Types
  build-depends:       bytestring

executable raft
  import:              common-options

  main-is:             Main.hs
  build-depends:       raft
